# daemonutils

./: Makefile.am  README  README.html  README.md  bootstrap  configure.in
src/: Makefile.am  kickstart.c  serve-list  serve.c  serve.h  sig.c  sig.h  supervise.c
